k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalify-dashboard
  labels:
    app: signalify-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalify-dashboard
  template:
    metadata:
      labels:
        app: signalify-dashboard
    spec:
      containers:
        - name: signalify-dashboard
          image: 'bahajian/signalify-dashboard:test'
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
      volumes:
        - name: nginx-cache
          emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: signalify-dashboard
  namespace: signalify-dashboard
spec:
  selector:
    app: signalify-dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: signalify-dashboard
  namespace: signalify-dashboard
spec:
  to:
    kind: Service
    name: signalify-dashboard
    weight: 100
  host: dashboard.signalify.co # Public hostname for the Route
  path: /dashboard
  port:
    targetPort: 8080
  tls:
    termination: edge
